# Game-2048

./: .gitignore  Dockerfile  Hướng dẫn.md  Hướng dẫn.txt  Makefile  README.md  buildozer.spec  docker-compose.yml  kivy_main.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_project.sh
.github/workflows/: build.yml
