[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "2048-game"
version = "1.0.0"
description = "2048 puzzle game built with Python and Pygame"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["game", "2048", "puzzle", "pygame", "kivy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

dependencies = [
    "pygame>=2.5.2",
    "kivy>=2.2.0",
    "kivymd>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "isort>=5.0",
]
build = [
    "pyinstaller>=5.0",
    "buildozer>=1.4.0",
    "cython>=0.29",
]

[project.urls]
Homepage = "https://github.com/yourusername/2048-game"
Repository = "https://github.com/yourusername/2048-game.git"
Issues = "https://github.com/yourusername/2048-game/issues"

[project.scripts]
"2048-game" = "main:main"
"2048-mobile" = "kivy_main:Game2048App.run"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
